RI-90 bugfix: jumping background on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,10 @@ button {
 html,
 body,
 #root {
-  height: 100%;
+  height: 100vh;
+  height: -moz-available; /* WebKit-based browsers will ignore this. */
+  height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  height: fill-available;
 }
 
 #root {
